Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetNumObj.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
