Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetundefinedFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, undefined> yoda
        boolean wrongRet = yoda(one, two)
     end
end
